# beepboop-ws

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose-full.yaml  compose.yaml
src/: main.rs
src/api/: auth.rs  user_api.rs
src/models/: jwt.rs  login_response.rs  mod.rs  network_response.rs  permission.rs  user_model.rs  who_am_i_response.rs
src/repository/: mongodb_repo.rs
src/webserverconfig/: cors.rs
