[package]
name = "beepboop-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
dotenv = "0.15.0"
postgres = "0.19.7"
redis = "0.24.0"
jsonwebtoken = "8.1.1"
chrono = "0.4.23"
serde_json = "1.0.88"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 

[dependencies.serde]
version = "1.0.147"
features= ["derive"]

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]